[develop] fixed the menu bug where it had extra margin when the page was loading

--- a/src/components/menu/navbar.css
+++ b/src/components/menu/navbar.css
@@ -2,7 +2,6 @@
     background-color: #CFCFCF;
     overflow: hidden;
     width: 100%;
-    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
