--- a/src/components/menu/navbarProducts.css
+++ b/src/components/menu/navbarProducts.css
@@ -4,7 +4,6 @@
     background-color: #EBEBEB;
     overflow: hidden;
     width: 100%;
-    margin: auto;
     display: flex;
     flex-direction: row;
 }
